--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="bg-dark p-5"
-     style="width: 100vw; height: 100vh">
+     style="max-width: 100vw; min-height: 100vh">
   <router-outlet></router-outlet>
+  <app-info></app-info>
 </div>
