--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<p-toast></p-toast>
+
+<div *ngIf="nasaResponse" class="container">
+  <div class="text-center">
+    <h1 class="display-5">{{nasaResponse?.title}}</h1>
+    <p>Astronomy Picture of the Day (APOD)</p>
+  </div>
+  <div class="content">
+    <div class="d-flex justify-content-center image">
+      <p-image *ngIf="nasaResponse?.media_type === 'image'"
+               src="{{nasaResponse?.hdurl}}" alt="Image" width="250" [preview]="true"></p-image>
+      <video *ngIf="nasaResponse?.media_type === 'video'"
+             autoplay="true" name="media">
+        <source src="{{nasaResponse?.url}}" type="video/mp4">
+      </video>
+    </div>
+    <div class="description mt-3">
+      <p>{{nasaResponse?.explanation}}</p>
+    </div>
+    <div class="credits d-flex justify-content-between mt-3">
+      <p style="font-style: italic;
+      color: #bebebe">Copyright: {{nasaResponse?.copyright}}</p>
+    </div>
+  </div>
+</div>
