--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
     <div class="description mt-3">
       <p>{{nasaResponse?.explanation}}</p>
     </div>
-    <div class="credits d-flex justify-content-between mt-3">
+    <div *ngIf="nasaResponse?.copyright" class="credits d-flex justify-content-between mt-3">
       <p style="font-style: italic;
       color: #bebebe">Copyright: {{nasaResponse?.copyright}}</p>
     </div>
