--- a/src/app/components/nasa/apod/apod.component.html
+++ b/src/app/components/nasa/apod/apod.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="nasaResponse" class="container">
   <div class="text-center">
     <h1 class="display-5">{{nasaResponse?.title}}</h1>
-    <p>Astronomy Picture of the Day (APOD)</p>
+    <p>{{title}}</p>
   </div>
   <div class="content">
     <div class="d-flex justify-content-center">
@@ -17,7 +17,7 @@
     <div class="description mt-3">
       <p>{{nasaResponse?.explanation}}</p>
     </div>
-    <div class="credits d-flex justify-content-between mt-3">
+    <div class="credits mt-3">
       <p style="font-style: italic;
       color: #bebebe">Copyright: {{nasaResponse?.copyright || 'Not found'}}</p>
     </div>
