--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="bg-dark p-5"
-     style="max-width: 100vw; min-height: 100vh">
+<div class="bg-dark">
   <router-outlet></router-outlet>
   <app-info></app-info>
 </div>
