--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="dataSocialNetworks.length > 0"
-     class="fixed-bottom bg-dark d-flex justify-content-between px-3 pt-3">
+     class="fixed-bottom bg-dark d-flex justify-content-between p-2">
   <div class="d-flex networks">
     <a *ngFor="let socialNetwork of dataSocialNetworks"
        href="{{socialNetwork.url}}" target="_blank">
@@ -9,7 +9,7 @@
     </a>
   </div>
   <div class="d-flex author">
-    <p class="text-end">
+    <p class="text-end m-0">
       <i class="pi pi-code m-1"></i>
       Angel Lucero | 2023</p>
   </div>
