--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,21 @@
-.bg-dark {
+$m-01: #071426;
+$m-02: #546c8c;
+
+
+.bg-dark-app {
   max-width: 100vw;
   min-height: 100vh;
   padding: 3rem 2rem;
-  background-color: black;
+  background-color: $m-01;
   background-image: radial-gradient(white, rgba(255, 255, 255, .1) 2px, transparent 20px),
   radial-gradient(white, rgba(255, 255, 255, .08) 1px, transparent 25px),
   radial-gradient(white, rgba(255, 255, 255, .05) 2px, transparent 30px),
   radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .02) 2px, transparent 35px);
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+}
+
+
+.bg-dark-blue {
+  background-color: $m-02 !important;
 }
