--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,5 +9,9 @@
       <h3 class="text-dark">EPIC</h3>
       <p class="text-muted mb-0">Earth Polychromatic Imaging Camera</p>
     </div>
+    <div class="card m-3 p-3 text-center" style="width: 18rem;" [routerLink]="['/mars-rover']">
+      <h3 class="text-dark">Mars Rover Photos</h3>
+      <p class="text-muted mb-0">Image data by NASA's rovers on Mars</p>
+    </div>
   </div>
 </div>
