--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,11 @@
   color: #f1f1f1;
 }
 
+.content-center {
+  height: 80vh;
+  place-content: center;
+}
+
 .text-justify {
   text-align: justify !important;
 }
