--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,17 @@
 <div class="container content-center text-center">
-  <h1 class="display-2">NASA API</h1>
-  <div class="row row-cols-auto justify-content-center">
-    <div class="card m-3 p-3 text-center" style="width: 18rem;" [routerLink]="['/apod']">
-      <h3 class="text-dark">APOD</h3>
-      <p class="text-muted mb-0">Astronomy Picture of the Day</p>
+    <h1 class="display-2">NASA API</h1>
+    <div class="row row-cols-auto justify-content-center">
+        <div class="card m-3 p-3 text-center" style="width: 18rem;" [routerLink]="['/apod']">
+            <h2 class="text-dark">APOD</h2>
+            <p class="text-muted mb-0">Astronomy Picture of the Day</p>
+        </div>
+        <div class="card m-3 p-3 text-center" style="width: 18rem;" [routerLink]="['/epic']">
+            <h2 class="text-dark">EPIC</h2>
+            <p class="text-muted mb-0">Earth Polychromatic Imaging Camera</p>
+        </div>
+        <div class="card m-3 p-3 text-center" style="width: 18rem;" [routerLink]="['/mars-rover']">
+            <h2 class="text-dark">Mars Rover</h2>
+            <p class="text-muted mb-0">Image data by NASA's rovers on Mars</p>
+        </div>
     </div>
-    <div class="card m-3 p-3 text-center" style="width: 18rem;" [routerLink]="['/epic']">
-      <h3 class="text-dark">EPIC</h3>
-      <p class="text-muted mb-0">Earth Polychromatic Imaging Camera</p>
-    </div>
-    <div class="card m-3 p-3 text-center" style="width: 18rem;" [routerLink]="['/mars-rover']">
-      <h3 class="text-dark">Mars Rover Photos</h3>
-      <p class="text-muted mb-0">Image data by NASA's rovers on Mars</p>
-    </div>
-  </div>
 </div>
